--- a/templates/base.html
+++ b/templates/base.html
@@ -71,6 +71,28 @@
     <!-- Inheritance - PARENT -->
 
     {% block content %} {% endblock %}
+
+    <!-- FOOTER -->
+
+    <footer>
+        <div id="contact-footer">
+            <p>Arquitecto: {{data.contact.name}}</p>
+            <p><i class="fab fa-whatsapp"></i> {{data.contact.phone}}</p>
+
+        </div>
+        <div id="social-media">
+
+            <a href="https://www.facebook.com/Esencial-Estudio-281058769179882/" target="-blanck"><i id="facebook-icon"
+                    class="fab fa-facebook-square fa-2x"></i></a>
+            <a href="https://www.youtube.com/channel/UCrDmOTQr7J_qkJ4qD-LyoAg" target="_blank"><i id="youtube-icon"
+                    class="fab fa-youtube fa-2x"></i></a>
+        </div>
+        
+        <div style="clear: both"></div>
+        <div id="copyright">
+            <p>Esencial construcciones copyright@ 2019</p>
+        </div>
+    </footer>
     
 </body>
 
