--- a/static/style.css
+++ b/static/style.css
@@ -1,44 +1,116 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Open Sans', sans-serif !important;
+.header-phone {
+  height: 90vh;
+  overflow: hidden;
+  position: relative;
+}
+.header-phone img {
+  height: 95vh;
+  position: absolute;
+  left: -66%;
+  z-index: 0;
+}
+.header-phone .text {
+  text-align: center;
+  position: absolute;
+  width: 230px;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  color: white;
+  z-index: 1;
+}
+.header-phone .text h1 {
+  font-size: medium;
 }
 
-#logo {
-  width: 100px;
+.about {
+  align-items: center;
+}
+.about .carousel {
+  max-width: 30vw;
+  padding-left: 10px;
+}
+.about .carousel img {
+  border-radius: 5px;
+}
+.about .text {
+  color: #504f4f;
+  padding: 50px 20px;
+}
+.about .text p {
+  text-align: justify;
+}
+
+.services-projects {
+  background: #f1f1f1;
+}
+
+.services {
+  padding-top: 1rem;
+  color: #504f4f;
+  background: #f1f1f1;
+  margin: auto;
+  max-width: 500px;
+}
+.services .title {
+  background: #ffe442;
+  text-align: center;
+}
+.services .body {
+  background: white;
+  padding: 2rem;
+  border-radius: 5px;
+}
+.services .body p {
+  text-align: justify;
+  margin-top: 2rem;
+  margin-bottom: 0;
+}
+
+.projects {
+  color: #504f4f;
+  background: #f1f1f1;
+  margin: auto;
+  max-width: 500px;
+}
+.projects .title {
+  background: #ffe442;
+  text-align: center;
+}
+.projects .modal-footer {
+  display: block !important;
+}
+.projects .modal-footer p {
+  margin: 0;
+}
+
+.contact {
+  background: #ffe442;
+  color: #504f4f;
+}
+.contact h2 {
+  padding: 20px 0;
+  text-align: center;
+}
+.contact form {
+  margin: 20px 0px;
+}
+.contact .text {
+  text-align: center;
+}
+.contact .embed-responsive {
+  margin: auto;
+  max-width: 400px;
 }
 
 nav {
   background: white;
 }
-
+nav .logo {
+  width: 100px;
+}
 nav a:hover {
   text-decoration: underline !important;
-}
-
-#inicio-phone {
-  display: none;
-  height: 90vh;
-  text-align: center;
-  overflow: hidden;
-  position: relative;
-}
-
-#inicio-phone img {
-  height: 95vh;
-  position: absolute;
-  left: -66%;
-  z-index: -1;
-}
-
-#inicio-phone #phone-text {
-  position: absolute;
-  width: 230px;
-  top: 80%;
-  left: 50%;
-  -webkit-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
-  color: white;
 }
 
 footer {
@@ -49,38 +121,40 @@ footer {
   color: white;
   overflow: hidden;
 }
-
 footer #contact-footer {
   float: left;
   margin: 20px;
   font-size: 12px;
 }
-
 footer #contact-footer p {
   margin: 10px;
   float: left;
 }
-
 footer #social-media {
   float: right;
 }
-
 footer #social-media i {
   margin: 20px;
 }
-
 footer #copyright p {
   font-size: 10px;
   text-align: center;
 }
-
 footer a:hover {
   text-decoration: none !important;
   color: white !important;
 }
 
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+.row {
+  margin: 0 !important;
+}
+
 a {
-  color: #636262 !important;
+  color: #504f4f !important;
 }
 
 a:hover {
@@ -88,410 +162,4 @@ a:hover {
   color: #252525 !important;
 }
 
-/*----------------------------------------------------
-    Home Page
-----------------------------------------------------*/
-/*----------------------------------------------------
-        about
-    ----------------------------------------------------*/
-#about-container {
-  padding: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  justify-items: center;
-}
-
-#about-container #about-carousel {
-  display: block;
-  max-width: 30vw;
-  min-width: 250px;
-  margin: 20px auto 10px auto;
-  border-radius: 5px;
-}
-
-#about-container #about-text {
-  color: #504f4f;
-  padding: 50px;
-  padding-right: 0px;
-  max-width: 800px;
-  min-width: 230px;
-}
-
-#about-container #about-text h6 {
-  text-align: justify;
-}
-
-/*----------------------------------------------------
-        Servicios
-    ----------------------------------------------------*/
-#servicios-home {
-  background: #f1f1f1;
-  padding: 0px 20px 30px 20px;
-}
-
-#servicios-home h2 {
-  color: #504f4f;
-  text-align: center;
-  padding: 30px;
-}
-
-#servicios-home .card {
-  margin: 20px auto;
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  color: #4e4e4e;
-}
-
-#servicios-home .card i {
-  padding: 40px 0px 20px 0px;
-  color: #ffdb00;
-}
-
-#servicios-home .card h5 {
-  border-bottom: solid 1px #504f4f;
-  padding-bottom: 30px;
-}
-
-#servicios-home button {
-  display: block;
-  margin: 30px auto 0px auto;
-}
-
-/*----------------------------------------------------
-        Proyectos
-    ----------------------------------------------------*/
-#projects-home .proyectos-title {
-  text-align: center;
-  padding: 30px 0px 0px 0px;
-  color: #504f4f;
-}
-
-#projects-home .block {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  margin: 30px 0;
-}
-
-#projects-home .block .project {
-  max-width: 500px;
-  position: relative;
-  margin: 30px;
-}
-
-#projects-home .block .project img {
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  width: 100%;
-  z-index: -1;
-}
-
-#projects-home .block .project .text {
-  display: block;
-  background: #25252571;
-  border-radius: 5px;
-  color: white;
-  text-align: center;
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  z-index: 1;
-  width: 80%;
-}
-
-#projects-home .block .project .text p {
-  margin: 0;
-}
-
-#projects-home button {
-  display: block;
-  margin: 30px auto 30px auto;
-}
-
-/*----------------------------------------------------
-        Contacto
-    ----------------------------------------------------*/
-#contactos-header {
-  background: #ffe442;
-}
-
-#contactos-header h2 {
-  padding: 50px;
-  color: #504f4f;
-}
-
-#contactos-header .map-responsive {
-  overflow: hidden;
-  padding-bottom: 56.25%;
-  position: relative;
-  height: 0;
-}
-
-#contactos-header .map-responsive iframe {
-  left: 50%;
-  margin-left: -40%;
-  top: 0;
-  height: 100%;
-  width: 80%;
-  position: absolute;
-}
-
-#contactos-header iframe {
-  display: block;
-  margin: 0px auto 40px auto;
-  overflow: hidden;
-}
-
-#contactos-header #map {
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-}
-
-#contactos-header #form {
-  top: 30px;
-  height: 800px;
-}
-
-#contactos-header .text {
-  padding: 30px;
-  margin-left: 10vw;
-  color: #4e4e4e;
-}
-
-/*----------------------------------------------------
-    servicios Page
-----------------------------------------------------*/
-/*----------------------------------------------------
-        documentation guide
-    ----------------------------------------------------*/
-.divider {
-  margin: 0px 0px 10px 0px;
-}
-
-#documentation-guide1 {
-  display: block;
-  width: 25vw;
-  height: 100vh;
-  float: left;
-  position: fixed;
-}
-
-#documentation-guide1 h2 {
-  color: #504f4f;
-  padding: 10px 0px;
-  border: solid #dfdfdf 1px;
-  border-radius: 5px;
-}
-
-/*----------------------------------------------------
-        documentation main
-    ----------------------------------------------------*/
-#documentation-header {
-  display: block;
-  float: right;
-  width: 75vw;
-}
-
-#documentation-header .documentation-text-wrapper {
-  margin: 40px;
-  color: #504f4f;
-}
-
-#documentation-header .documentation-text-wrapper li {
-  font-size: 30px;
-}
-
-#documentation-header .documentation-text-wrapper p {
-  text-align: justify;
-}
-
-#documentation-header .documentation-img-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#documentation-header .documentation-img-wrapper img {
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  display: inline-block;
-  width: 30vw;
-  min-width: 250px;
-  margin: 20px;
-}
-
-/*----------------------------------------------------
-    Proyectos Page
-----------------------------------------------------*/
-#proyectos {
-  background: #ffffff url(img/bg.jpg) no-repeat fixed center;
-}
-
-/*----------------------------------------------------
-        documentation guide
-    ----------------------------------------------------*/
-.divider {
-  margin: 0px 0px 10px 0px;
-}
-
-#documentation-guide2 {
-  display: block;
-  width: 25vw;
-  height: 85%;
-  float: left;
-  position: fixed;
-  overflow: scroll;
-}
-
-#documentation-guide2 h2 {
-  color: #504f4f;
-  padding: 10px 0px;
-  border: solid #dfdfdf 1px;
-  border-radius: 5px;
-}
-
-/*----------------------------------------------------
-    Multimedia Page
-----------------------------------------------------*/
-#multimedia-page {
-  background: #ffe442;
-}
-
-#multimedia-page h2 {
-  padding: 50px;
-  color: #504f4f;
-}
-
-#multimedia-page .container-you {
-  max-width: 600px;
-  max-height: 400px;
-  margin: 50px auto 0px auto;
-  padding-bottom: 100px;
-}
-
-#multimedia-page .container-you .iframe-container {
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%;
-  height: 0;
-}
-
-#multimedia-page .container-you .iframe-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-/*----------------------------------------------------
-        documentation main
-    ----------------------------------------------------*/
-#documentation-header {
-  display: block;
-  float: right;
-  width: 75vw;
-}
-
-#documentation-header .documentation-text-wrapper {
-  margin: 40px;
-  color: #504f4f;
-}
-
-#documentation-header .documentation-text-wrapper li {
-  font-size: 30px;
-}
-
-#documentation-header .documentation-text-wrapper p {
-  text-align: justify;
-}
-
-#documentation-header .documentation-img-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#documentation-header .documentation-img-wrapper img {
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  display: inline-block;
-  width: 30vw;
-  min-width: 250px;
-  margin: 20px;
-}
-
-/*----------------------------------------------------
-    MEDIA QUERIES
-----------------------------------------------------*/
-@media screen and (max-width: 700px) {
-  #about-container {
-    display: block;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    justify-items: center;
-    margin: 0px auto;
-  }
-  #documentation-guide1 {
-    display: none;
-  }
-  #documentation-header {
-    width: 100%;
-  }
-  #documentation-guide2 {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  #projects-home {
-    width: 100%;
-  }
-  #projects-home .project_img {
-    float: none !important;
-    width: 100% !important;
-    padding-bottom: 20px;
-  }
-  #projects-home .project_text {
-    display: none !important;
-    top: 0 !important;
-    -webkit-transform: 0 !important;
-    transform: 0 !important;
-  }
-  #inicio-phone {
-    display: block;
-  }
-  #makeFade {
-    display: none;
-  }
-  #about-text {
-    padding: 10px !important;
-  }
-}
 /*# sourceMappingURL=style.css.map */
