--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
         <!-- Logo Hyperlink -->
         <a  class="navbar-brand" 
             href="{{ url_for('home')}}">
-            <img    id="logo" 
+            <img    class="logo" 
                     src="{{ url_for('static', filename='img/logo2.png') }}">
         </a>
         <!-- Toggle button -->
